[gd_scene load_steps=3 format=2]

[ext_resource path="res://graphics/program_icons/barracuda.png" type="Texture" id=1]
[ext_resource path="res://src/boot/DriverSettings.gd" type="Script" id=2]

[node name="DriverSettings" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MC" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="VB" type="VBoxContainer" parent="MC"]
margin_left = 12.0
margin_top = 12.0
margin_right = 1012.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12

[node name="NameLabel" type="Label" parent="MC/VB"]
margin_right = 1000.0
margin_bottom = 14.0
text = "Barracuda"
align = 1
valign = 1

[node name="IconRect" type="TextureRect" parent="MC/VB"]
margin_top = 26.0
margin_right = 1000.0
margin_bottom = 154.0
texture = ExtResource( 1 )
stretch_mode = 6

[node name="SloganLabel" type="Label" parent="MC/VB"]
margin_top = 166.0
margin_right = 1000.0
margin_bottom = 180.0
text = "At the vanguard of modern graphics!"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="MC/VB"]
margin_top = 192.0
margin_right = 1000.0
margin_bottom = 196.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CommandLabel" type="Label" parent="MC/VB"]
margin_top = 208.0
margin_right = 1000.0
margin_bottom = 222.0
text = "Hidden Command Toolset:"
uppercase = true

[node name="CommandVB" type="VBoxContainer" parent="MC/VB"]
margin_top = 234.0
margin_right = 1000.0
margin_bottom = 248.0
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MC/VB/CommandVB"]
margin_right = 1000.0
margin_bottom = 14.0
text = "No custom commands are registered"
align = 1

[node name="UpdateLabel" type="Label" parent="MC/VB"]
margin_top = 260.0
margin_right = 1000.0
margin_bottom = 274.0
text = "Updates:"
uppercase = true

[node name="UpdateVB" type="VBoxContainer" parent="MC/VB"]
margin_top = 286.0
margin_right = 1000.0
margin_bottom = 332.0
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MC/VB/UpdateVB"]
margin_right = 1000.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "You are using the latest version"
align = 1

[node name="UpdateButton" type="Button" parent="MC/VB/UpdateVB"]
margin_left = 436.0
margin_top = 26.0
margin_right = 564.0
margin_bottom = 46.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 4
disabled = true
text = "Update"

[node name="InstallLabel" type="Label" parent="MC/VB"]
margin_top = 344.0
margin_right = 1000.0
margin_bottom = 358.0
text = "INSTALLATION:"
uppercase = true

[node name="InstallVB" type="VBoxContainer" parent="MC/VB"]
margin_top = 370.0
margin_right = 1000.0
margin_bottom = 448.0
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MC/VB/InstallVB"]
margin_right = 1000.0
margin_bottom = 14.0
text = "This driver is correctly installed"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstallButton" type="Button" parent="MC/VB/InstallVB"]
margin_left = 436.0
margin_top = 26.0
margin_right = 564.0
margin_bottom = 46.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 4
disabled = true
text = "Install"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UninstallButton" type="Button" parent="MC/VB/InstallVB"]
margin_left = 436.0
margin_top = 58.0
margin_right = 564.0
margin_bottom = 78.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 4
disabled = true
text = "Uninstall"
__meta__ = {
"_edit_use_anchors_": false
}
